# TicTacToe-hs

./: .gitignore  LICENSE  README.md  TicTacToe.cabal
app/: Main.hs
src/: Lib.hs
src/AI/: AlphaBeta.hs  Minimax.hs  Strategy.hs
src/Game/: Board.hs  Game.hs  Piece.hs  Player.hs
