name:                TicTacToe
version:             0.1.0.0
synopsis:            TicTacToe-playing AI
description:         Please see README.md
homepage:            https://github.com/mihassan/TicTacToe-hs
license:             BSD3
license-file:        LICENSE
author:              mihassan@gmail.com
copyright:           2016 jcanero, 2021 mihassan
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Game.Piece
                     , Game.Board
                     , Game.Game
                     , Game.Player
                     , AI.Minimax
                     , AI.AlphaBeta
                     , AI.Strategy
  build-depends:       base >= 4.7 && < 5
                     , text
                     , composition
                     , split
                     , array
                     , mtl
                     , haskeline
                     , containers
  ghc-options:         -O3
  default-language:    Haskell2010

executable TicTacToe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , TicTacToe
                     , text
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mihassan/TicTacToe-hs
